--- a/leaveSystem/src/main/resources/application.properties
+++ b/leaveSystem/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=leaveSystem
+
+springdoc.swagger-ui.path=/leaveSystem/swagger-ui.html
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/leavesystem
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
