--- a/leaveFontend/package.json
+++ b/leaveFontend/package.json
@@ -26,9 +26,13 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "echarts": "^6.0.0",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
+    "ngx-echarts": "^17.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
