--- a/leaveFontend/package.json
+++ b/leaveFontend/package.json
@@ -39,6 +39,7 @@
     "@angular-devkit/build-angular": "^18.2.20",
     "@angular/cli": "^18.2.20",
     "@angular/compiler-cli": "^18.2.0",
+    "@playwright/test": "^1.54.2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -48,6 +49,11 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "sonar-scanner": "^3.1.0",
     "typescript": "~5.5.2"
+  },
+  "overrides": {
+    "esbuild": "^0.25.0",
+    "tmp": "0.2.4"
   }
 }
